major fix : fastn update trauma update crashed the entire site 😢 overflow still not working !

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,8 +8,9 @@ body::-webkit-scrollbar {
 
 /* Assuming 'scroller' is the class where you want to show the scrollbar */
 .scroller::-webkit-scrollbar {
-  height: 8px; /* Adjust as needed */
+  display: flex;
   border-radius: 4px; /* Adjust as needed */
+  overflow-x: scroll;
 }
 
 .scroller::-webkit-scrollbar-track {
